・週間プログラム設計対応 ・体重・体組成記録対応 ・メールアドレス変更
